# hsnr_ooa_dp

./: CMakeLists.txt  Decorator.h  Observer.h  Singleton.h  State.h  Strategy.h  main.cpp
State/: Geldautomat.cpp  Geldautomat.h  HasCard.cpp  HasCard.h  HasPin.cpp  HasPin.h  IGeldautomatState.h  NoCard.cpp  NoCard.h  NoCash.cpp  NoCash.h
